--- a/app/globals.css
+++ b/app/globals.css
@@ -1,1 +1,10 @@
 @import "tailwindcss";
+
+@layer utilities {
+    .mt-tomato {
+      margin-top: 120px;
+    }
+    .rounded-sexy-name {
+      border-radius: 11.11px;
+    }
+  }
