--- a/app/globals.css
+++ b/app/globals.css
@@ -1,8 +1,10 @@
 @import "tailwindcss";
-@import "tailwindcss/preflight";
 
 @layer base {
     a {
         @apply text-orange-500;
     }
+}
+.primary-btn {
+    @apply w-full bg-orange-500 text-white  font-medium  rounded-md text-center hover:bg-orange-400 transition-colors;
 }
